minor text and doc changes

--- a/quiz/templates/home.html
+++ b/quiz/templates/home.html
@@ -4,21 +4,20 @@
 
 
 
-Je mehr richtige Antworten, desto mehr Cocktail!
 
-<p>
+<p class="hometext">
 Der Vögelroboter soll zwei Leidenschaften vereinen, die kombiniert noch mehr Lebensfreude bringen: Vogelbeobachtung und Cocktailkultur.
 </p>
 
-<p>
+<p class="hometext">
 Hier können Sie Ihre Vögelerkennung üben. Und für richtige Antworten wird man mit einem Averna Sour belohnt.
 </p>
 
-<p>
+<p class="hometext">
 Je mehr richtige Antworten, desto mehr Cocktail!
 </p>
 
-<p>
+<p class="hometext">
 Sie sehen ein Bild eines Vogels und drei Vorschläge. Wählen Sie den richtigen Namen für den Vogel und lassen Sie sich Ihre Belohnung schmecken!
 </p>
 
