--- a/quiz/static/style.css
+++ b/quiz/static/style.css
@@ -43,3 +43,9 @@ input[type=submit] { align-self: start; min-width: 10em; }
     min-height: 48px;
     font-size: 24px;
   }
+
+.hometext {
+	font-size: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
