--- a/quiz/templates/quiz.html
+++ b/quiz/templates/quiz.html
@@ -8,31 +8,26 @@
     </h1>
 {% endblock %}
 
-{% block nav %} {% endblock %}
+{% block nav %}<!-- keeps nav from main template from showing --> {% endblock %}
 {% block content %}
-    <img src="/static/birds/{{p.bird.img}}" class="centerpad">
-    <p class="centerpad" style="font-size:24px">{{p.question_number}}) Welcher Vogel ist das? </p>
-    <!-- {% if p.show_answer %}
-    {% else %}
-    {% endif %}
-    -->
-        <ul class="centerpad">
-            {% for answer in p.answers %}
-                <li class="listpad"><a href="{{url_for('quiz')}}/{{answer}}">{{answer}}</a></li>
-            {% endfor %}
-        </ul>
-        <!--
+    < img src="/static/birds/{p.bird.img}" class="centerpad">
+    <img src="/static/birds/{{ session['bird']['img']}}" class="centerpad">
+    <p class="centerpad" style="font-size:24px">
+        {{ session['question_number'] }}) Welcher Vogel ist das? 
+    </p>
+    <ul class="centerpad">
+        {% for answer in p.answers %}
+            <li class="listpad"><a href="{{url_for('quiz')}}/{{answer}}">{{answer}}</a></li>
+        {% endfor %}
+    </ul>
 
-        <p class="centerpad" style="font-size:24px">{{p.last_correct}}</p>
-        -->
-        <!-- <a href="/quiz"><button type="button"> Nächster Vogel </button> </a> -->
-
-    <!--
-
+    <!-- -->
     <hr>
     Debugging<br>
-    bird: {{p.bird.name}}<br>
-    last answer? {{p.last_answer}}<br>
+    bird: {{ session['bird']['name'] }}<br>
+    bird img: {{ session['bird']['img'] }}<br>
+    last correct? {{p.last_correct}}<br>
+    used list?  {{session['used']}}<br>
     -->
 {% endblock %}
 
