--- a/quiz/templates/quiz_results.html
+++ b/quiz/templates/quiz_results.html
@@ -2,26 +2,20 @@
 <!-- hide header and nav so the quiz is cleaner --> 
 
 {% block content %}
-
-    <ul class="centerpad">
-        {% for answer in p.results %}
-            <li><img src="/static/birds/{{answer.img}}" class="centerpad">
-                    {% if answer.bird == answer.answer %}
-                        Richtig! Es ist ein {{answer.bird}}
+    <ul class="centerpad" >
+        {% for answer in p['results'] %}
+            <li><img src="/static/birds/{{answer.img}}" ><br>
+            <!-- <li><img src="/static/birds/{{answer.img}}" class="centerpad"> -->
+                    {% if answer.bird_name == answer.answer %}
+                        Richtig! Es ist ein {{answer.bird_name}}
                     {% else %}
-                        Schade! Es ist ein {{answer.bird}} und deine Antwort war {{answer.answer}}
+                        Schade! Es ist ein {{answer.bird_name}} und deine Antwort war {{answer.answer}}
                     {% endif %}
                 </li>
                 <hr>
         {% endfor %}
+        <a href="/quiz"><button type="button" class="button-19 style="margin-top:15px;margin-bottom:15px;"> Spiel nochmal?</button> </a>
     </ul>
-    <a href="/quiz"><button type="button"> Spiel nochmal?</button> </a>
-    <!-- 
-    <hr>
-
-    Debugging<br>
-    {{p.results}}
-    -->
 {% endblock %}
 
 
