Added licensing information about the birds, and links to their wikipedia pages on the bird_list page.

--- a/quiz/templates/base.html
+++ b/quiz/templates/base.html
@@ -9,7 +9,7 @@
     <nav> 
       <a href={{ url_for('home') }}>Home</a>&nbsp; - &nbsp; 
       <a href={{ url_for('quiz') }}>Quiz</a>&nbsp; - &nbsp; 
-      <a href={{ url_for('bird_list') }}>List Birds</a></li>
+      <a href={{ url_for('bird_list') }}>List of Birds</a></li>
     </nav>
   {% endblock %}
   {% for message in get_flashed_messages() %}
