added picture to home page

--- a/quiz/templates/home.html
+++ b/quiz/templates/home.html
@@ -21,6 +21,7 @@ Je mehr richtige Antworten, desto mehr Cocktail!
 Sie sehen ein Bild eines Vogels und drei Vorschläge. Wählen Sie den richtigen Namen für den Vogel und lassen Sie sich Ihre Belohnung schmecken!
 </p>
 
+<img src="static/sandra_rich.jpg" class="centerpad">
 {% endblock %}
 
 
