Created horizontal format

--- a/quiz/templates/footer.html
+++ b/quiz/templates/footer.html
@@ -1,6 +1,8 @@
+<div>
 <hr>
-<p style="text-align:center; font-size:small">
+<p style="bottom:0; text-align:center; font-size:small">
     RoboExotica 2023. Ein weiterer toller Roboter von Sandra, Rich, und Hello Drinkbot!
 </p>
 <hr>
+</div>
 
