added thanks to templates/footer.html

--- a/quiz/templates/footer.html
+++ b/quiz/templates/footer.html
@@ -1,7 +1,7 @@
 <div>
 <hr>
 <p style="bottom:0; text-align:center; font-size:small">
-    RoboExotica 2023. Ein weiterer toller Roboter von Sandra, Rich, und Hello Drinkbot!
+    RoboExotica 2023. Ein weiterer toller Roboter von Sandra, Rich, und Hello Drinkbot! Danke an Zwax! Und immer, vielen Dank an Frankie!
 </p>
 <hr>
 </div>
