Make buttons nicer

--- a/quiz/templates/quiz_results.html
+++ b/quiz/templates/quiz_results.html
@@ -14,7 +14,7 @@
                 </li>
                 <hr>
         {% endfor %}
-        <a href="/quiz"><button type="button" class="button-19 style="margin-top:15px;margin-bottom:15px;"> Spiel nochmal?</button> </a>
+        <a href="/quiz"><button type="button" class="button-19"> Spiel nochmal?</button> </a>
     </ul>
 {% endblock %}
 
