--- a/quiz/templates/quiz.html
+++ b/quiz/templates/quiz.html
@@ -17,7 +17,7 @@
         </p>
         <ul class="centerpad">
             {% for answer in p.answers %}
-                <li class="listpad"><a href="{{url_for('quiz')}}/{{answer}}">{{answer}}</a></li>
+                <li class="listpad"><a href="{{url_for('quiz')}}/{{answer}}"><button type="button" class="button-19">{{answer}}</button></a></li>
             {% endfor %}
         </ul>
     </div>
