--- a/quiz/templates/admin.html
+++ b/quiz/templates/admin.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
+<!-- hide header and nav so the quiz is cleaner -->
+{% block header %}
+<h1 class="center">
+    <a href="/">Vögelroboter
+        {% block title %} {{ p.page_title }} {% endblock %}
+    </a>
+</h1>
+{% endblock %}
 
+{% block nav %}<!-- keeps nav from main template from showing --> {% endblock %}
 {% block content %}
 
 <h2>Constants</h2>
@@ -13,22 +22,21 @@ for the pumps are in vogel_constants.py.</p>
 
 <h2>Quiz Birds</h2>
 
-<p>All bird images are from wikipedia, and have been downsized. Click the links for the full image, attribution, and licensing information. See below for a list of all of the bird names used as possible answers.</p>
-<p>The quiz is in the file birds_quiz.csv. You can add birds by updating that file, and putting the image in the folder static/birds</p>
-<p>Possible answer birds are in the file birds_all.csv. You can add birds by updating that file. No images are needed.</p>
-{% for bird in p.quizlst %}
-
-    <a href="{{bird.url}}">
-    <img src="static/birds/{{bird.img}}"><br>
-    {{bird.name}}
-    Wikipedia link for {{bird.name}}</a>
+<p>All bird images are from wikipedia, and have been downsized.</p>
+<p>The quiz is generated from the birds found as directories in <code>static/birds</code>.</p>
+<p>If you want to add a new bird, create a directory underneath <code>static/birds</code> using the name of the bird. Put in a file prefixed with <code>img_</code> for the image of the bird, a file prefixed with <code>ruf_</code> for the audio of the bird’s call and a file prefixed with <code>son_</code> for a sonogram image of the bird’s call.</p>
+{% for bird_name,bird_info in p.quiz_content.birds.items() %}
+    <img src="static/birds/{{bird_name}}/{{bird_info.img}}"><br>
+    {% if "ruf" in bird_info %}
+    <audio controls loading="lazy" src="static/birds/{{bird_name}}/{{bird_info.ruf}}"></audio><br>
+    {% endif %}
     <hr>
 {% endfor %}
 
 <h2>All Birds</h2>
 <ul>
-    {% for bird in p.birds %}
-        <li>{{bird}}</li>
+    {% for bird_name in p.quiz_content.birds.keys() %}
+        <li>{{bird_name}}</li>
     {% endfor %}
 </ul>
 
