--- a/quiz/templates/base.html
+++ b/quiz/templates/base.html
@@ -8,7 +8,7 @@
   {% block nav %}
     <nav> 
       <a href={{ url_for('home') }}>Home</a>&nbsp; - &nbsp; 
-      <a href={{ url_for('quiz') }}>Quiz</a>&nbsp; - &nbsp; 
+      <a href={{ url_for('quiz_welcome') }}>Quiz</a>&nbsp; - &nbsp; 
       <a href={{ url_for('admin') }}>Admin</a></li>
     </nav>
   {% endblock %}
